--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,13 @@
         "tightenco/ziggy": "^1.5"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^1.0",
         "fzaninotto/faker": "^1.9.1",
-        "laradumps/laradumps": "^1.12",
+        "laradumps/laradumps": "^2.2",
+        "laradumps/laradumps-core": "^0.3.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "spatie/laravel-ignition": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
