--- a/.env_cantabria
+++ b/.env_cantabria
@@ -1,7 +1,7 @@
 APP_NAME=Cantabria
 APP_ENV=local
 APP_KEY=base64:bbNh11Ty7gnf36HIvE6q4H2XPOMV9Ez8mgRkBlFyffA=
-APP_DEBUG=false
+APP_DEBUG=
 APP_URL=http://cantabriaeventos.com
 
 LOG_CHANNEL=stack
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=cantabri_cantabria
-DB_USERNAME=cantabri_rmarquez
-DB_PASSWORD=rMARQUEZ316
+DB_USERNAME=cantabri_rmarquez316
+DB_PASSWORD="7wqN,hS3rMh%"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
