--- a/.env_cantabria
+++ b/.env_cantabria
@@ -1,7 +1,7 @@
 APP_NAME=Cantabria
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:bbNh11Ty7gnf36HIvE6q4H2XPOMV9Ez8mgRkBlFyffA=
-APP_DEBUG=
+APP_DEBUG=false
 APP_URL=http://cantabriaeventos.com
 
 LOG_CHANNEL=stack
@@ -11,9 +11,10 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=cantabri_cantabria
 DB_USERNAME=cantabri_rmarquez316
-DB_PASSWORD="7wqN,hS3rMh%"
+DB_PASSWORD=G5P0h.Bh~5]6
 
 BROADCAST_DRIVER=log
+FILESYSTEM_DISK=public_upload
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
