--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,12 @@
         "livewire/livewire": "^2.10",
         "mews/captcha": "^3.3",
         "php-flasher/flasher-laravel": "^1.15",
+        "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-permission": "^5.10",
         "tightenco/ziggy": "^1.5"
     },
     "require-dev": {
+        "fakerphp/faker": "^1.24",
         "laradumps/laradumps": "^2.2",
         "laradumps/laradumps-core": "^0.3.0",
         "mockery/mockery": "^1.3.1",
