feature - Mod yuli september 2025

--- a/.env_cantabria
+++ b/.env_cantabria
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=u639285249_cantabria
 DB_USERNAME=u639285249_rmarquez316
-DB_PASSWORD=0M1?vh]1W^jotO&w
+DB_PASSWORD=G5P0h.Bh~5]6
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
